--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
     <footer>
         <div class="reveal">
-            <p>&copy; 2025 SidoKost Elite. All rights reserved.</p>
+            <p>&copy; 2026 SidoKost Elite. All rights reserved. Designed by Danizar.dev</p>
             <p style="font-size: 0.8rem; margin-top: 10px; opacity: 0.7;">Jl. Perumahan Elit No. 123, Sidoarjo, Jawa Timur</p>
         </div>
     </footer>
@@ -336,4 +336,5 @@
     </script>
 
 </body>
+
 </html>
