--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
             .hero-content h1 { font-size: 4rem; }
             .features { padding: 6rem 1.5rem; }
         }
+
+
     </style>
 </head>
 <body>
@@ -286,8 +288,9 @@
 
     <footer>
         <div class="reveal">
-            <p>&copy; 2026 SidoKost Elite. All rights reserved. Designed by Danizar.dev</p>
-            <p style="font-size: 0.8rem; margin-top: 10px; opacity: 0.7;">Jl. Perumahan Elit No. 123, Sidoarjo, Jawa Timur</p>
+            <p>&copy; 2026 SidoKost Elite. All rights reserved.</p>
+            <p style="font-size: 0.8rem; margin-top: 7px; opacity: 0.7;">Jl. Perumahan Elit No. 123, Sidoarjo, Jawa Timur</p>
+            <p style="font-size: 0.5rem; margin-top:10px; opacity:0.5;">Designed by Danizar.dev</p>
         </div>
     </footer>
 
@@ -338,3 +341,4 @@
 </body>
 
 </html>
+
