--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <section id="hero" class="hero">
         <div class="hero-content reveal"> 
             <h1>Kenyamanan Serasa<br>di Rumah Sendiri</h1>
-            <p>Kos eksklusif di perumahan elit Sidoarjo. Tenang, aman, dan strategis.</p>
+            <p>Kos eksklusif di perumahan elit Sidoarjo.<br> Tenang, aman, dan strategis.</p>
             <a href="#rooms" class="btn-primary">Lihat Pilihan Kamar</a>
         </div>
     </section>
@@ -341,4 +341,5 @@
 </body>
 
 </html>
+
 
